--- a/html/main.html
+++ b/html/main.html
@@ -16,7 +16,7 @@
         <button class="head-but"><img alt="booking" class="func" src="../images/book.svg"></button>
         <button class="head-but"><img alt="user" class="func" src="../images/user.svg"></button>
         <div class="but">
-            <button>Logout</button>
+            <button onclick="logout()">Logout</button>
         </div>
     </header>
 
