--- a/html/my_page.html
+++ b/html/my_page.html
@@ -13,27 +13,25 @@
     <header>
         <img class="icon logo" src="../images/logo_hour.svg" alt="Logo">
         <h2 class="heading">BookASpace</h2>
-                        <button class="head-but"><img alt="booking" class="func" src="../images/book.svg"></button>
-                        <button class="head-but"><img alt="user" class="func" src="../images/user.svg"></button>
-
+        <button class="head-but" id="reserve-btn"><img alt="booking" class="func" src="../images/book.svg"></button>
+        <button class="head-but" id="edit-btn"><img alt="user" class="func" src="../images/user.svg"></button>
         <div class="but">
-            <button>Logout</button>
+            <button onclick="logout()">Logout</button>
         </div>
     </header>
 
     <main>
         <div class="presentation">
-            <h2 class="heading">
-                JaneDoe
+            <h2 id="username" class="heading">
             </h2>
             <ul>
-                <li>Full name: Jane Doe</li>
-                <li>Email: jane.doe@gmail.com</li>
-                <li>Tel: +1 8674895445</li>
+                <li>Full name: <span  id="full-name"></span></li>
+                <li>Email: <span id="email"></span></li>
+                <li>Tel: <span id="phone"></span></li>
             </ul>
             <div class="but-group">
-                <button class="on-page">Reserve auditorium</button>
-                <button class="on-page">Edit profile</button>
+                <button id="reserve-btn" class="on-page" >Reserve auditorium</button>
+                <button id="edit-user-btn" class="on-page" >Edit profile</button>
             </div>
         </div>
             <div class="desk">
@@ -110,6 +108,8 @@
         </div>
 
     </footer>
+    <script src="/js/my_page.js"></script>
+
 </body>
 
 </html>
