--- a/html/login.html
+++ b/html/login.html
@@ -44,7 +44,7 @@
     </main>
     <footer>
             <p class="note">
-            ©2022 TakeASeat. All rights reserved
+            ©2022 BookASpace. All rights reserved
         </p>
         <img alt="Line" src="../images/line.svg">
         <div class="social-media">
