--- a/html/signup.html
+++ b/html/signup.html
@@ -58,7 +58,7 @@
         </main>
         <footer>
             <p class="note">
-                ©2022 TakeASeat. All rights reserved
+                ©2022 BookASpace. All rights reserved
             </p>
             <img alt="Line" src="../images/line.svg">
             <div class="social-media">
